public/stylesheets/stylesheet.css
body
{
	font: 10pt Gill Sans, Sans-Serif;
}

a       { color: #2D6C91; text-decoration: none; }
.pagecontentitem p a { text-decoration: underline; }
a:hover { text-decoration: underline; }

.tablecell
{
	width: 30px; padding-right: 5px; text-align: center;
}

.coloredtablecell
{
	width: 30px; padding-right: 5px; background-color: #DDDDDD; text-align: center;
}           

.tabledivider
{
	border-top: solid 1px #BBBBBB;
}

.moduletitle
{
	border-bottom: solid 1px #CCCCCC;
	font-weight: normal; font-size: 14pt;
	margin-left: 10px; margin-top: 10px; margin-bottom: 10px
}

.modulesubtitle
{
	font-weight: normal; font-size: 12pt;
	margin-left: 12px; margin-top: 10px; margin-bottom: 10px
}

.modulesubtitle a { text-decoration: none; }
.modulesubtitle a:hover { text-decoration: underline; }


#browse
{
	position: fixed; bottom: 0px; left: 0px; width: 120px; height: 20px;
	z-index: 2;
	background-color: #CCCCCC;
	text-align: center;
}

#notice
{
	position: absolute;
	background-color: #AAFFAA;
	z-index: 3;
	left: 50%; top: 10px;
	padding: 5px;
	border: solid 1px green;
}

#errorExplanation
{
	position: absolute;
	background-color: #FFAAAA;
	z-index: 3;
	left: 50%; top: 10px;
	padding: 5px;
	border: solid 1px red;
}

#menu
{
	position: fixed; top: 0px; left: 0px; width: 120px;
	z-index: 2;
	background-color: white;
}

#menu .menuitem
{
	padding-left: 10px;
	padding-top: 5px; padding-bottom: 5px;
	background-color: #888888;
	color: white;
	border-bottom: solid 1px white;
}

#menu .homemenuitem
{
	padding-left: 10px;
	padding-top: 5px; padding-bottom: 5px;
	background-color: #666666;
	color: white;
	border-bottom: solid 1px white;
}

#menu .photomenuitem
{
	padding-left: 10px;
	padding-top: 5px; padding-bottom: 5px;
	background-color: #333333;
	color: white;
	border-bottom: solid 1px white;
}

#menu a
{
	color: white;
	text-decoration: none;
}

#menu a:hover
{
	color: white;
	text-decoration: underline;
}

#pagetitle
{
	font: 20pt Gill Sans, Sans-Serif;
	padding-left: 10px;
	padding-bottom: 5px;
}

#pageheader
{
	height: 70px;
	padding-top: 8px;
	padding-bottom: 4px;
	background-color: white;
}                                             

/* SEE http://www.yafla.com/dforbes/yaflaColor/ColorRGBHSL.aspx? with code 91842D */
 
/* -------------------------- SPECIES -------------------- */

#menu .speciesmenuitem
{
	padding-left: 10px;
	padding-top: 5px; padding-bottom: 5px;
	background-color: #91522D;
	color: white;
	border-bottom: solid 1px white;
}

#pageheader-species
{
	height: 70px;
	padding-top: 8px;
	padding-bottom: 4px;
	background-color: #91522D;   
	color: white;
}  

#pageheader-species a
{
	color: white;
	text-decoration: none;
}

/* ------------------------- LOCATION -------------------- */
       
#menu .locationmenuitem
{
	padding-left: 10px;
	padding-top: 5px; padding-bottom: 5px;
	background-color: #91842D;
	color: white;
	border-bottom: solid 1px white;
}

#pageheader-location
{
	height: 70px;
	padding-top: 8px;
	padding-bottom: 4px;
	background-color: #91842D;
	color: white;
}

#pageheader-location a
{
	color: white;
	text-decoration: none;
}

/* ------------- TRIP ----------------------- */
     
#menu .tripmenuitem
{
	padding-left: 10px;
	padding-top: 5px; padding-bottom: 5px;
	background-color: #6C912D;
	color: white;
	border-bottom: solid 1px white;
}

#pageheader-trip
{
	height: 70px;
	padding-top: 8px;
	padding-bottom: 4px;
	background-color: #6C912D;
	color: white;
}
          
#pageheader-trip a
{
	color: white;
	text-decoration: none;
}

#pageheader-photo
{
	height: 70px;
	padding-top: 8px;
	padding-bottom: 4px;
}
          
#pageheader-photo a
{
	color: white;
	text-decoration: none;
}

#pageheader-home1
{
	height: 70px;
	padding-top: 8px;
	padding-bottom: 4px;
	background-image: url(/images/banner1.jpg);
	background-position: 60%;
}

.pageheaderitem
{
	margin-left: 15px; margin-right: 15px; margin-bottom: 3px;
}

.pagecontentmodule .photo
{
	text-align: center; display: inline;
}


#pagebody
{
	position: absolute; top: 0px; left: 130px; width: 80%;	
	padding-bottom: 50px;
}

#pagecontent
{
	background-color: white;
}

#pagecontent .pagecontentmodule
{
	margin-top: 10px;
	margin-bottom: 15px;
	margin-right: 10px;
}

#pagecontent .pagecontentitem
{
	margin-left: 30px; margin-bottom: 1px;
}

#pagecontent .pagecontentitem .notes
{
	margin-left: 10px; margin-bottom: 3px; margin-top: 2px; margin-right: 10px;
}

#gallerythumbs
{
	position: absolute; top: 70px; right: 0px; width: 100px;
	z-index: 2;
	background-color: white;
}

#gallerythumbs .photo
{
	padding-bottom: 5px;
}

